# ml4paleo

./: .gitignore  API-Sketching.ipynb  Dockerfile  README.containers.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  image-vuln-check.yml  python-publish.yml
EDA/: API-Sketching.ipynb  ConvertEgg.ipynb  ConvertToZarr.ipynb  TrimZarr.ipynb  ViewAraripesaurus.ipynb  ViewEgg.ipynb
EDA/burrows/: ConvertBurrows.ipynb  ConvertToZarr.ipynb  Downres-Imagery.ipynb  ViewBurrows.ipynb
archive/: 1-Re-Align.ipynb  2-RF-Seg-43um.ipynb  2-RF-Seg.ipynb
docs/: Developing.md  Fresh-Installation.md  Statuses.md  Volume-Tour.md  old-readme.md  tech-volume.md
docs/aws-proposal/: main.md  sequenceDiagram.md
eda/: data  mimics.ipynb  mlp-multifeat.ipynb
ml4paleo/: volume_providers.py
ml4paleo/meshing/: __init__.py
ml4paleo/segmentation/: __init__.py  rf.py
ml4paleo/segmentation/models/: __init__.py
ml4paleo/stitching/aligned/: __init__.py
ml4paleo/stitching/combiners/: __init__.py
ml4paleo/volume_providers/: __init__.py  dicomvp.py  imagevp.py  io.py
notebooks/: 0-Create-H5.ipynb  Upload-43um.ipynb  example.ipynb
webapp/: README.md  apputils.py  config.py  conversionrunner.py  debug-rf.ipynb  job.py  main.py  meshrunner.py  segmentrunner.py
webapp/templates/: about.html  annotation_gallery.html  annotation_page.html  annotation_page_v2.html  download_page.html  index.html  job_page.html  macros.html  models_page.html  navbar.html  previous_jobs.html
webapp/templates/job_page_components/: annotation_cta.html  download_meshes.html  segmentation_results.html
webpaint/: .gitignore  main.py  rf.pkl
webpaint/templates/: index.html
webupload/: .gitignore  config.py  conversionrunner.py  job.py  jobs.json  main.py  segmentrunner.py
webupload/templates/: annotation_page.html  download_page.html  index.html  job_page.html  macros.html  navbar.html
