[tool.poetry]
name = "ml4paleo"
version = "0.1.0"
description = "Deep learning computer vision pipelines for paleontological 3D reconstruction"
authors = ["Jordan Matelsky <j6k4m8@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
numpy = "^1.25.0"
Pillow = "*"
psutil = "^5.9.5"
matplotlib = "^3.7.1"
zarr = "^2.15.0"
tqdm = "^4.65.0"
Flask = "^2.3.2"
#scikit-learn = "^1.2.2"
#scikit-image = "^0.19.3"
marshmallow = "^3.19.0"
jque = "^0.1.3"
intern = "^1.4.1"
Flask-Cors = "^3.0.10"
#zmesh = "^1.6.2"
numpy-stl = "^3.0.1"
# scipy = "^1.10.1"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
jupyter = "^1.0.0"
ipython = "^8.14.0"

[tool.poetry.extras]
dicom = ["pydicom"]
bossdb = ["intern"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
