[project]
name = "ml4paleo"
version = "0.1.0"
description = "Deep learning computer vision pipelines for paleontological 3D reconstruction"
authors = [{ name = "Jordan Matelsky", email = "j6k4m8@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "flask>=2.3.2",
    "flask-cors>=3.0.10",
    "intern>=1.4.1",
    "jque>=0.1.3",
    "marshmallow>=3.19.0",
    "matplotlib>=3.9.2",
    "numcodecs>=0.10.0,<0.16",
    "numpy>=1.25.0",
    "numpy-stl>=3.0.1",
    "pillow>=11.3.0",
    "psutil>=5.9.5",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.6.1",
    "tqdm>=4.65.0",
    "zarr>=2.15.0,<3",
    "zmesh>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
bossdb = [
    "cloud-volume>=12.12.1",
    "intern>=1.4.2",
]
dicom = [
    "pydicom>=2.4.4",
]
